<resources>
    <string name="app_name">Moto Brothers</string>
    <string name="login">LOGIN</string>
    <string name="senha">Senha</string>
    <string name="botaologin">Entrar</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="esquecisenha">Esqueceu a senha?</string>
    <string name="email">Email</string>
    <string name="action_sign_in">Entre ou se registre</string>
    <string name="welcome">"Seja bem-vindo!"</string>
    <string name="invalid_username">Esse nome de usuário não é valido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Proximo</string>
    <string name="previous">Previous</string>
    <string name="nome">Nome Completo</string>
    <string name="celular">Numero de Celular</string>
    <string name="dataNascimento">Data de Nascimento</string>
    <string name="termos">TERMOS DE USO</string>
    <string name="concordotermos">CONCORDO COM OS</string>
    <string name="confirmarsenha">Confirmar Senha</string>
    <string name="CPF">CPF</string>
    <string name="dataNasc">DD/MM/AAAA</string>
    <string name="facebook_app_id">661518951063046</string>
    <string name="fb_login_protocol_scheme">fb661518951063046</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu_gaveta">MenuGaveta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Pagina Inicial</string>
    <string name="menu_corridas">Historico de Corridas</string>
    <string name="menu_pagamento">Pagamentos</string>
    <string name="menu_seguranca">Segurança</string>
    <string name="menu_mototaxista">Seja Mototaxista</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_logout">Sair</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_menu_passageiro">MenuPassageiro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

