<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroPassageiro"
    android:background="@drawable/backgroundconta_launcher">

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textColor="@color/cinza"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/cinza"
        android:textSize="18dp"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.140"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="@color/cinza"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/editUsuario"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/cinza"
        android:textSize="18dp"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.230"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/cinza"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.050"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/cinza"
        android:textSize="18dp"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.310"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular"
        android:textColor="@color/cinza"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/editCelular"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text|phone"
        android:textColor="@color/cinza"
        android:textSize="18dp"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>